--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "jquery": "^3.7.0"
   },
   "name": "sophie_s_burger",
   "version": "1.0.0",
   "description": "Hamburguesas gourmet de Sophie",
   "main": "index.php",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
